# django-bancard

./: .gitignore  MANIFEST.in  README.md  setup.cfg
bancard/: admin.py  apps.py  gateway.py  interface.py  models.py  operations.py  signals.py  urls.py  utils.py  views.py
bancard/locale/es/LC_MESSAGES/: django.mo  django.po
bancard/migrations/: 0001_initial.py  0001_squashed_0005_reversion_response_description.py  0002_auto_20210516_0143.py  0002_auto_20210804_0221.py  0002_foreign_keys.py.old  0003_auto_20210516_1912.py  0004_reversion.py  0005_reversion_response_description.py
