[metadata]
name = django-bancard
version = 0.1
description = Accept Bancard payments in your Django project
long_description = file: README.md
url = https://github.com/angoybu/django-bancard
author = Andres Goyburu
author_email = andres@girolabs.com
license = © Andres Goyburu 2021
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: Copyright
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    requests >= 2.25.1
